Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -8,7 +8,33 @@
 </head>
 <body>
 
-  <!-- Write your HTML here -->
+  <table>
+    <tr>
+      <thead>City</thead>
+      <thead>2017 estimate</thead>
+      <thead>State</thead>
+    
+    <tr>
+      <td>New york</td>
+      <td>new york</td>
+      <td>8622698</td>
+    </tr>
+    <tr>
+      <td>Los angeles</td>
+      <td>california</td>
+      <td>3999759</td>
+    </tr>
+    <tr>
+      <td>Chicago</td>
+      <td>illinois</td>
+      <td>2716450</td>
+    </tr>
+    <tr>
+      <td>Houston</td>
+      <td>texas</td>
+      <td>2312717</td>
+    </tr>
+  </table>
   
 </body>
 </html>
