Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
   <table>
     <tr>
-      <thead>City</thead>
-      <thead>2017 estimate</thead>
-      <thead>State</thead>
+      <th>City</th>
+      <th>2017 estimate</th>
+      <th>State</th>
     
     <tr>
       <td>New york</td>
