Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <th>2017 estimate</th>
     <tr>
       <td>New york</td>
-      <td>new york</td>
+      <td>New york</td>
       <td>8622698</td>
     </tr>
     <tr>
