Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       <th>State</th>
     <th>2017 estimate</th>
     <tr>
-      <td>New york</td>
-      <td>New york</td>
+      <td>New York</td>
+      <td>New York</td>
       <td>8622698</td>
     </tr>
     <tr>
